--- a/src/components/LanguageRedirect.astro
+++ b/src/components/LanguageRedirect.astro
@@ -1,4 +1,4 @@
-<div id="lang-toast" class="fixed bottom-4 inset-x-4 z-[100] md:left-1/2 md:right-auto md:-translate-x-1/2 md:w-full md:max-w-md hidden">
+<div id="lang-toast" class="fixed bottom-4 left-4 right-4 z-[100] md:left-1/2 md:right-auto md:-translate-x-1/2 md:w-full md:max-w-md max-w-[calc(100vw-2rem)] hidden">
   <div class="glass p-3 rounded-2xl shadow-2xl border border-[var(--hydrogen-pink)]/30 animate-reveal-up backdrop-blur-xl bg-[#030014]/90">
     <div class="flex flex-col gap-3">
       
