--- a/src/pages/de/index.astro
+++ b/src/pages/de/index.astro
@@ -11,7 +11,7 @@ const lang = 'de';
 const t = translations[lang];
 ---
 
-<Layout title="Stargazing Hub - Sky Live | Explore the Universe" lang={lang}>
+<Layout title="Beste kostenlose Sternen-App: Sternenkarte & Lichtverschmutzung" lang={lang} description="Beste kostenlose Sternenbeobachtungs-App mit Echtzeit-Sternenkarte, Lichtverschmutzungskarte, ISS-Tracker & Astronomiewetter. AR-Sternenansicht zur Sternenidentifikation, Kometen- und Satellitenverfolgung. Heute beste Beobachtungszeit mit Seeing, Transparenz & Mondphasenkalender. Kostenlose Sternen-App.">
   <main>
     <Hero t={t} lang={lang} />
     <Features t={t} />
