--- a/src/pages/nl/index.astro
+++ b/src/pages/nl/index.astro
@@ -11,7 +11,7 @@ const lang = 'nl';
 const t = translations[lang];
 ---
 
-<Layout title="Beste gratis sterrenkijker-app: sterrenkaart & lichtvervuiling" lang={lang} description="Beste gratis sterrenkijker-app met real-time sterrenkaart, lichtvervuilingskaart, ISS-tracker & astronomieweerver. AR sterrenkaart voor sterrenidentificatie, kometen- en satellietvolgen. Beste observatietijd vandaag met seeing, transparantie & maanfasekalender. Gratis sterrenkijker-app.">
+<Layout title="Beste gratis sterrenkijker-app: sterrenkaart & lichtvervuiling" lang={lang} description="Beste gratis sterrenkijker-app met real-time sterrenkaart, lichtvervuilingskaart, ISS-tracker & astronomieweerver. AR sterrenkaart voor sterrenidentificatie.">
   <main>
     <Hero t={t} lang={lang} />
     <Features t={t} />
