--- a/src/pages/pl/index.astro
+++ b/src/pages/pl/index.astro
@@ -11,7 +11,7 @@ const lang = 'pl';
 const t = translations[lang];
 ---
 
-<Layout title="Najlepsza darmowa aplikacja do obserwacji gwiazd: mapa nieba i zanieczyszczenie" lang={lang} description="Najlepsza darmowa aplikacja do obserwacji gwiazd z mapą nieba w czasie rzeczywistym, mapą zanieczyszczenia, trackerem ISS i pogodą astronomiczną. Widok nieba AR do identyfikacji gwiazd, sledzenia komet i satelitów. Najlepszy czas obserwacji dzis z seeing, przezroczystością i kalendarzem faz księżyca. Darmowa aplikacja do obserwacji gwiazd.">
+<Layout title="Najlepsza darmowa aplikacja do obserwacji gwiazd: mapa nieba i zanieczyszczenie" lang={lang} description="Najlepsza darmowa aplikacja do obserwacji gwiazd z mapą nieba w czasie rzeczywistym, zanieczyszczeniem, ISS i pogodą. Widok nieba AR.">
   <main>
     <Hero t={t} lang={lang} />
     <Features t={t} />
